# RM_Manager

./: .gitignore  Readme.md  source.bash
core/debugger/remote_adapter/: CMakeLists.txt  README.md  package.xml
core/debugger/remote_adapter/include/remote_adapter/: remote_adapter.hpp
core/debugger/remote_adapter/launch/: example.launch.py
core/debugger/remote_adapter/params/: example.yaml
core/debugger/remote_adapter/src/: remote_adapter_node.cpp
core/debugger/twist_servo_debugger/: CMakeLists.txt  README.md  package.xml
core/debugger/twist_servo_debugger/include/twist_servo_debugger/: twist_servo_debugger.hpp
core/debugger/twist_servo_debugger/launch/: example.launch.py
core/debugger/twist_servo_debugger/params/: example.yaml
core/debugger/twist_servo_debugger/src/: twist_servo_debugger_node.cpp
core/remote_controller/: CMakeLists.txt  package.xml
core/remote_controller/include/remote_controller/: remote_controller.hpp
core/remote_controller/src/: main.cpp  remote_controller.cpp
core/rm_manager/: CMakeLists.txt  Readme.md  package.xml
core/rm_manager/include/rm_manager/: rm_manager.hpp  uart_driver.hpp  util.hpp
core/rm_manager/src/: main.cpp  rm_manager.cpp  util.cpp
core/rm_message/: CMakeLists.txt  Readme.md  package.xml
core/rm_message/msg/: GeneralMessage.msg  RemoteControl.msg  SendMessage.msg
