<?xml version="1.0"?>
<package format="3">
  <name>twist_servo_debugger</name>
  <version>0.1.0</version>
  <description>Map RemoteControl channels to Twist axes and publish geometry_msgs/Twist.</description>
  <maintainer email="pnx@example.com">PnX</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rm_message</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
